pwm: tiehrpwm: Make code comment in .free() more useful (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12005,6 +12005,7 @@
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-in-.fre.patch
+	patches.suse/pwm-tiehrpwm-Make-code-comment-in-.free-more-useful.patch
 
 	########################################################
 	# end of sorted patches
