--- a/series.conf
+++ b/series.conf
@@ -12009,6 +12009,7 @@
 	patches.suse/pwm-tiehrpwm-Fix-various-off-by-one-errors-in-duty-c.patch
 	patches.suse/pwm-tiehrpwm-Fix-corner-case-in-clock-divisor-calcul.patch
 	patches.suse/mfd-vexpress-sysreg-Check-the-return-value-of-devm_g.patch
+	patches.suse/regmap-Remove-superfluous-check-for-config-in-__regm.patch
 
 	########################################################
 	# end of sorted patches
