--- a/series.conf
+++ b/series.conf
@@ -12033,6 +12033,7 @@
 	patches.suse/i2c-designware-Add-disabling-clocks-when-probe-fails.patch
 	patches.suse/i3c-Fix-default-I2C-adapter-timeout-value.patch
 	patches.suse/i3c-master-svc-Use-manual-response-for-IBI-events.patch
+	patches.suse/i3c-master-svc-Recycle-unused-IBI-slot.patch
 
 	########################################################
 	# end of sorted patches
