--- a/series.conf
+++ b/series.conf
@@ -12038,6 +12038,7 @@
 	patches.suse/PM-devfreq-rockchip-dfi-double-count-on-RK3588.patch
 	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
+	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
 
 	########################################################
 	# end of sorted patches
