--- a/series.conf
+++ b/series.conf
@@ -12039,6 +12039,7 @@
 	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
+	patches.suse/ACPI-processor-idle-Fix-memory-leak-when-register-cp.patch
 
 	########################################################
 	# end of sorted patches
