i3c: Fix default I2C adapter timeout value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12031,6 +12031,7 @@
 	patches.suse/i2c-mediatek-fix-potential-incorrect-use-of-I2C_MAST.patch
 	patches.suse/i2c-designware-Fix-clock-issue-when-PM-is-disabled.patch
 	patches.suse/i2c-designware-Add-disabling-clocks-when-probe-fails.patch
+	patches.suse/i3c-Fix-default-I2C-adapter-timeout-value.patch
 
 	########################################################
 	# end of sorted patches
