firmware: meson_sm: fix device leak at probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12047,6 +12047,7 @@
 	patches.suse/firmware-arm_scmi-Mark-VirtIO-ready-before-registeri.patch
 	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8183-prob.patch
 	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8192-prob.patch
+	patches.suse/firmware-meson_sm-fix-device-leak-at-probe.patch
 
 	########################################################
 	# end of sorted patches
