--- a/series.conf
+++ b/series.conf
@@ -12022,6 +12022,7 @@
 	patches.suse/leds-flash-leds-qcom-flash-Update-torch-current-clam.patch
 	patches.suse/leds-leds-lp55xx-Use-correct-address-for-memory-prog.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
+	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 
 	########################################################
 	# end of sorted patches
