spi: cadence-quadspi: Flush posted register writes before INDAC access (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12013,6 +12013,7 @@
 	patches.suse/regulator-scmi-Use-int-type-to-store-negative-error-.patch
 	patches.suse/spi-bcm2835-Remove-redundant-semicolons.patch
 	patches.suse/spi-mtk-snfi-Remove-redundant-semicolons.patch
+	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef.patch
 
 	########################################################
 	# end of sorted patches
