--- a/series.conf
+++ b/series.conf
@@ -12007,6 +12007,7 @@
 	patches.suse/pwm-tiehrpwm-Don-t-drop-runtime-PM-reference-in-.fre.patch
 	patches.suse/pwm-tiehrpwm-Make-code-comment-in-.free-more-useful.patch
 	patches.suse/pwm-tiehrpwm-Fix-various-off-by-one-errors-in-duty-c.patch
+	patches.suse/pwm-tiehrpwm-Fix-corner-case-in-clock-divisor-calcul.patch
 
 	########################################################
 	# end of sorted patches
