thermal/drivers/qcom/lmh: Add missing IRQ includes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12042,6 +12042,7 @@
 	patches.suse/ACPI-processor-idle-Fix-memory-leak-when-register-cp.patch
 	patches.suse/ACPI-property-Fix-buffer-properties-extraction-for-s.patch
 	patches.suse/ACPI-TAD-Add-missing-sysfs_remove_group-for-ACPI_TAD.patch
+	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
 
 	########################################################
 	# end of sorted patches
