i2c: designware: Add disabling clocks when probe fails (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12030,6 +12030,7 @@
 	patches.suse/pinctrl-renesas-Use-int-type-to-store-negative-error.patch
 	patches.suse/i2c-mediatek-fix-potential-incorrect-use-of-I2C_MAST.patch
 	patches.suse/i2c-designware-Fix-clock-issue-when-PM-is-disabled.patch
+	patches.suse/i2c-designware-Add-disabling-clocks-when-probe-fails.patch
 
 	########################################################
 	# end of sorted patches
