--- a/series.conf
+++ b/series.conf
@@ -12023,6 +12023,7 @@
 	patches.suse/leds-leds-lp55xx-Use-correct-address-for-memory-prog.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
+	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
 
 	########################################################
 	# end of sorted patches
