--- a/series.conf
+++ b/series.conf
@@ -12002,6 +12002,7 @@
 	patches.suse/erofs-avoid-reading-more-for-fragment-maps.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tracer-r.patch
 	patches.suse/btrfs-return-any-hit-error-from-extent_writepage_io.patch
+	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 
 	########################################################
 	# end of sorted patches
