--- a/series.conf
+++ b/series.conf
@@ -12029,6 +12029,7 @@
 	patches.suse/pinctrl-samsung-Drop-unused-S3C24xx-driver-data.patch
 	patches.suse/pinctrl-renesas-Use-int-type-to-store-negative-error.patch
 	patches.suse/i2c-mediatek-fix-potential-incorrect-use-of-I2C_MAST.patch
+	patches.suse/i2c-designware-Fix-clock-issue-when-PM-is-disabled.patch
 
 	########################################################
 	# end of sorted patches
