spi: mtk-snfi: Remove redundant semicolons (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12012,6 +12012,7 @@
 	patches.suse/regmap-Remove-superfluous-check-for-config-in-__regm.patch
 	patches.suse/regulator-scmi-Use-int-type-to-store-negative-error-.patch
 	patches.suse/spi-bcm2835-Remove-redundant-semicolons.patch
+	patches.suse/spi-mtk-snfi-Remove-redundant-semicolons.patch
 
 	########################################################
 	# end of sorted patches
