soc: qcom: mdt_loader: Deal with zero e_shentsize (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11820,6 +11820,7 @@
 	patches.suse/ALSA-firewire-motu-drop-EPOLLOUT-from-poll-return-va.patch
 	patches.suse/ALSA-usb-audio-Allow-Focusrite-devices-to-use-low-sa.patch
 	patches.suse/ALSA-hda-hdmi-Add-pin-fix-for-another-HP-EliteDesk-8.patch
+	patches.suse/soc-qcom-mdt_loader-Deal-with-zero-e_shentsize.patch
 	patches.suse/tee-fix-NULL-pointer-dereference-in-tee_shm_put.patch
 	patches.suse/arm64-dts-imx8mp-tqma8mpql-fix-LDO5-power-off.patch
 	patches.suse/arm64-dts-imx8mp-Fix-missing-microSD-slot-vqmmc-on-DH-elec.patch
