--- a/series.conf
+++ b/series.conf
@@ -12049,6 +12049,7 @@
 	patches.suse/soc-mediatek-mtk-svs-fix-device-leaks-on-mt8192-prob.patch
 	patches.suse/firmware-meson_sm-fix-device-leak-at-probe.patch
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
+	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
 
 	########################################################
 	# end of sorted patches
