--- a/series.conf
+++ b/series.conf
@@ -32977,6 +32977,7 @@
 	patches.suse/Input-ims-pcu-check-record-size-in-ims_pcu_flash_fir.patch
 	patches.suse/KVM-SVM-Clear-current_vmcb-during-vCPU-free-for-all-.patch
 	patches.suse/KVM-VMX-Flush-shadow-VMCS-on-emergency-reboot.patch
+	patches.suse/msft-hv-3278-Drivers-hv-Always-select-CONFIG_SYSFB-for-Hyper-V-gu.patch
 	patches.suse/hwmon-pmbus-max34440-Fix-support-for-max34451.patch
 	patches.suse/hwmon-asus-ec-sensors-check-sensor-index-in-read_str.patch
 	patches.suse/HID-usbhid-Eliminate-recurrent-out-of-bounds-bug-in-.patch
