Fix BPF selftests compilation error in bpf_iter.c (git-fixes)
Since SUSE commit 7cae2487c586, BPF selftests fails to compile.

  .../tools/testing/selftests/bpf/prog_tests/bpf_iter.c: In function 'test_task_common_nocheck':
  .../tools/testing/selftests/bpf/prog_tests/bpf_iter.c:231:26: error: implicit declaration of function 'gettid'; did you mean 'getgid'? [-Werror=implicit-function-declaration]
      231 |         skel->bss->tid = gettid();
          |                          ^~~~~~
          |                          getgid

Fix the BPF selftests compilation failure by:
- bpf: handle implicit declaration of function gettid in
  bpf_iter.c
- Refresh
  patches.suse/selftests-bpf-Clean-up-open-coded-gettid-syscall-inv.patch.

--- a/series.conf
+++ b/series.conf
@@ -29398,6 +29398,7 @@
 	patches.suse/soc-fsl-cpm1-qmc-Set-the-ret-error-code-on-platform_.patch
 	patches.suse/bpf-Prevent-tailcall-infinite-loop-caused-by-freplac.patch
 	patches.suse/bpf-arm64-Remove-garbage-frame-for-struct_ops-trampoline.patch
+	patches.suse/bpf-handle-implicit-declaration-of-function-gettid-i.patch
 	patches.suse/bpf-bpftool-Fix-incorrect-disasm-pc.patch
 	patches.suse/selftests-bpf-Clean-up-open-coded-gettid-syscall-inv.patch
 	patches.suse/bpf-Force-uprobe-bpf-program-to-always-return-0.patch
