kbuild/modpost: Continue processing all unresolved symbols when KLP_SYM_RELA is found (bsc#1218644, bsc#1250655).

--- a/series.conf
+++ b/series.conf
@@ -12440,6 +12440,7 @@
 	patches.suse/livepatch-Create-and-include-UAPI-headers.patch
 	patches.suse/livepatch-Add-klp-convert-tool.patch
 	patches.suse/kbuild-modpost-integrate-klp-convert.patch
+	patches.suse/kbuild-modpost-Continue-processing-all-unresolved-symbols.patch
 	patches.suse/livepatch-Add-sample-livepatch-module.patch
 
 	########################################################
