--- a/series.conf
+++ b/series.conf
@@ -10587,7 +10587,93 @@
 	patches.kernel.org/6.12.49-104-minmax.h-simplify-the-variants-of-clamp.patch
 	patches.kernel.org/6.12.49-105-minmax.h-remove-some-defines-that-are-only-ex.patch
 	patches.kernel.org/6.12.49-106-Linux-6.12.49.patch
-	patches.suse/crypto-af_alg-Fix-incorrect-boolean-values-in-af_alg_.patch
+	patches.kernel.org/6.12.50-001-scsi-ufs-mcq-Fix-memory-allocation-checks-for.patch
+	patches.kernel.org/6.12.50-002-firewire-core-fix-overlooked-update-of-subsys.patch
+	patches.kernel.org/6.12.50-003-ALSA-usb-audio-Fix-code-alignment-in-mixer_qu.patch
+	patches.kernel.org/6.12.50-004-ALSA-usb-audio-Fix-block-comments-in-mixer_qu.patch
+	patches.kernel.org/6.12.50-005-ALSA-usb-audio-Drop-unnecessary-parentheses-i.patch
+	patches.kernel.org/6.12.50-006-ALSA-usb-audio-Avoid-multiple-assignments-in-.patch
+	patches.kernel.org/6.12.50-007-ALSA-usb-audio-Simplify-NULL-comparison-in-mi.patch
+	patches.kernel.org/6.12.50-008-ALSA-usb-audio-Remove-unneeded-wmb-in-mixer_q.patch
+	patches.kernel.org/6.12.50-009-ALSA-usb-audio-Add-mixer-quirk-for-Sony-DualS.patch
+	patches.kernel.org/6.12.50-010-ALSA-usb-audio-Convert-comma-to-semicolon.patch
+	patches.kernel.org/6.12.50-011-ALSA-hda-realtek-Add-support-for-ASUS-NUC-usi.patch
+	patches.kernel.org/6.12.50-012-ALSA-usb-audio-Fix-build-with-CONFIG_INPUT-n.patch
+	patches.kernel.org/6.12.50-013-usb-core-Add-0x-prefix-to-quirks-debug-output.patch
+	patches.kernel.org/6.12.50-014-net-fec-rename-struct-fec_devinfo-fec_imx6x_i.patch
+	patches.kernel.org/6.12.50-015-net-sfp-add-quirk-for-Potron-SFP-XGSPON-ONU-S.patch
+	patches.kernel.org/6.12.50-016-mmc-sdhci-cadence-add-Mobileye-eyeQ-support.patch
+	patches.kernel.org/6.12.50-017-i2c-designware-Add-quirk-for-Intel-Xe.patch
+	patches.kernel.org/6.12.50-018-ALSA-usb-audio-Add-DSD-support-for-Comtrue-US.patch
+	patches.kernel.org/6.12.50-019-ALSA-usb-audio-move-mixer_quirks-min_mute-int.patch
+	patches.kernel.org/6.12.50-020-ALSA-usb-audio-Add-mute-TLV-for-playback-volu.patch
+	patches.kernel.org/6.12.50-021-net-sfp-add-quirk-for-FLYPRO-copper-SFP-modul.patch
+	patches.kernel.org/6.12.50-022-IB-mlx5-Fix-obj_type-mismatch-for-SRQ-event-s.patch
+	patches.kernel.org/6.12.50-023-HID-amd_sfh-Add-sync-across-amd-sfh-work-func.patch
+	patches.kernel.org/6.12.50-024-firmware-imx-Add-stub-functions-for-SCMI-MISC.patch
+	patches.kernel.org/6.12.50-025-arm64-dts-imx8mp-Correct-thermal-sensor-index.patch
+	patches.kernel.org/6.12.50-026-ARM-dts-kirkwood-Fix-sound-DAI-cells-for-Open.patch
+	patches.kernel.org/6.12.50-027-cpufreq-Initialize-cpufreq-based-invariance-b.patch
+	patches.kernel.org/6.12.50-028-smb-server-don-t-use-delayed_work-for-post_re.patch
+	patches.kernel.org/6.12.50-029-smb-server-use-disable_work_sync-in-transport.patch
+	patches.kernel.org/6.12.50-030-bpf-Check-the-helper-function-is-valid-in-get.patch
+	patches.kernel.org/6.12.50-031-btrfs-don-t-allow-adding-block-device-of-less.patch
+	patches.kernel.org/6.12.50-032-wifi-virt_wifi-Fix-page-fault-on-connect.patch
+	patches.kernel.org/6.12.50-033-can-rcar_can-rcar_can_resume-fix-s2ram-with-P.patch
+	patches.kernel.org/6.12.50-034-bpf-Reject-bpf_timer-for-PREEMPT_RT.patch
+	patches.kernel.org/6.12.50-035-xfrm-xfrm_alloc_spi-shouldn-t-use-0-as-SPI.patch
+	patches.kernel.org/6.12.50-036-can-etas_es58x-populate-ndo_change_mtu-to-pre.patch
+	patches.kernel.org/6.12.50-037-can-hi311x-populate-ndo_change_mtu-to-prevent.patch
+	patches.kernel.org/6.12.50-038-can-sun4i_can-populate-ndo_change_mtu-to-prev.patch
+	patches.kernel.org/6.12.50-039-can-mcba_usb-populate-ndo_change_mtu-to-preve.patch
+	patches.kernel.org/6.12.50-040-can-peak_usb-fix-shift-out-of-bounds-issue.patch
+	patches.kernel.org/6.12.50-041-net-tun-Update-napi-skb-after-XDP-process.patch
+	patches.kernel.org/6.12.50-042-net-smc-fix-warning-in-smc_rx_splice-when-cal.patch
+	patches.kernel.org/6.12.50-043-ethernet-rvu-af-Remove-slash-from-the-driver-.patch
+	patches.kernel.org/6.12.50-044-Bluetooth-hci_sync-Fix-hci_resume_advertising.patch
+	patches.kernel.org/6.12.50-045-Bluetooth-hci_event-Fix-UAF-in-hci_acl_create.patch
+	patches.kernel.org/6.12.50-046-vhost-Take-a-reference-on-the-task-in-struct-.patch
+	patches.kernel.org/6.12.50-047-bnxt_en-correct-offset-handling-for-IPv6-dest.patch
+	patches.kernel.org/6.12.50-048-net-allow-alloc_skb_with_frags-to-use-MAX_SKB.patch
+	patches.kernel.org/6.12.50-049-nexthop-Forbid-FDB-status-change-while-nextho.patch
+	patches.kernel.org/6.12.50-050-selftests-fib_nexthops-Fix-creation-of-non-FD.patch
+	patches.kernel.org/6.12.50-051-net-dsa-lantiq_gswip-move-gswip_add_single_po.patch
+	patches.kernel.org/6.12.50-052-net-dsa-lantiq_gswip-suppress-EINVAL-errors-f.patch
+	patches.kernel.org/6.12.50-053-octeontx2-pf-Fix-potential-use-after-free-in-.patch
+	patches.kernel.org/6.12.50-054-mm-gup-local-lru_add_drain-to-avoid-lru_add_d.patch
+	patches.kernel.org/6.12.50-055-mm-revert-mm-gup-clear-the-LRU-flag-of-a-page.patch
+	patches.kernel.org/6.12.50-056-mm-folio_may_be_lru_cached-unless-folio_test_.patch
+	patches.kernel.org/6.12.50-057-drm-gma500-Fix-null-dereference-in-hdmi-teard.patch
+	patches.kernel.org/6.12.50-058-futex-Prevent-use-after-free-during-requeue-P.patch
+	patches.kernel.org/6.12.50-059-drm-panthor-Defer-scheduler-entitiy-destructi.patch
+	patches.kernel.org/6.12.50-060-platform-x86-lg-laptop-Fix-WMAB-call-in-fan_m.patch
+	patches.kernel.org/6.12.50-061-smb-client-fix-wrong-index-reference-in-smb2_.patch
+	patches.kernel.org/6.12.50-062-HID-asus-add-support-for-missing-PX-series-fn.patch
+	patches.kernel.org/6.12.50-063-i40e-add-validation-for-ring_len-param.patch
+	patches.kernel.org/6.12.50-064-i40e-fix-idx-validation-in-i40e_validate_queu.patch
+	patches.kernel.org/6.12.50-065-i40e-fix-idx-validation-in-config-queues-msg.patch
+	patches.kernel.org/6.12.50-066-i40e-fix-input-validation-logic-for-action_me.patch
+	patches.kernel.org/6.12.50-067-i40e-fix-validation-of-VF-state-in-get-resour.patch
+	patches.kernel.org/6.12.50-068-i40e-add-max-boundary-check-for-VF-filters.patch
+	patches.kernel.org/6.12.50-069-i40e-add-mask-to-apply-valid-bits-for-itr_idx.patch
+	patches.kernel.org/6.12.50-070-i40e-improve-VF-MAC-filters-accounting.patch
+	patches.kernel.org/6.12.50-071-crypto-af_alg-Fix-incorrect-boolean-values-in.patch
+	patches.kernel.org/6.12.50-072-tracing-dynevent-Add-a-missing-lockdown-check.patch
+	patches.kernel.org/6.12.50-073-ARM-dts-socfpga-sodia-Fix-mdio-bus-probe-and-.patch
+	patches.kernel.org/6.12.50-074-arm64-dts-marvell-cn9132-clearfog-disable-eMM.patch
+	patches.kernel.org/6.12.50-075-arm64-dts-marvell-cn9132-clearfog-fix-multi-l.patch
+	patches.kernel.org/6.12.50-076-drm-ast-Use-msleep-instead-of-mdelay-for-edid.patch
+	patches.kernel.org/6.12.50-077-afs-Fix-potential-null-pointer-dereference-in.patch
+	patches.kernel.org/6.12.50-078-fs-proc-task_mmu-check-p-vec_buf-for-NULL.patch
+	patches.kernel.org/6.12.50-079-gpiolib-Extend-software-node-support-to-suppo.patch
+	patches.kernel.org/6.12.50-080-kmsan-fix-out-of-bounds-access-to-shadow-memo.patch
+	patches.kernel.org/6.12.50-081-mm-hugetlb-fix-folio-is-still-mapped-when-del.patch
+	patches.kernel.org/6.12.50-082-fbcon-fix-integer-overflow-in-fbcon_do_set_fo.patch
+	patches.kernel.org/6.12.50-083-fbcon-Fix-OOB-access-in-font-allocation.patch
+	patches.kernel.org/6.12.50-084-iommufd-Fix-race-during-abort-for-file-descri.patch
+	patches.kernel.org/6.12.50-085-Revert-usb-xhci-remove-option-to-change-a-def.patch
+	patches.kernel.org/6.12.50-086-drm-i915-backlight-Return-immediately-when-sc.patch
+	patches.kernel.org/6.12.50-087-Linux-6.12.50.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
