Squashfs: fix uninit-value in squashfs_get_parent (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34330,6 +34330,7 @@
 	patches.suse/firmware-meson_sm-fix-device-leak-at-probe.patch
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
+	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
 
 	########################################################
 	# end of sorted patches
