--- a/series.conf
+++ b/series.conf
@@ -34332,6 +34332,7 @@
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
 	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
+	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
 
 	########################################################
 	# end of sorted patches
