Squashfs: add additional inode sanity checking (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12077,6 +12077,7 @@
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
 	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
+	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 
 	########################################################
 	# end of sorted patches
