--- a/series.conf
+++ b/series.conf
@@ -23775,6 +23775,7 @@
 	patches.suse/ipv6-reject-malicious-packets-in-ipv6_gso_segment.patch
 	patches.suse/net-packet-fix-a-race-in-packet_set_ring-and-packet_notifi.patch
 	patches.suse/vsock-Do-not-allow-binding-to-VMADDR_PORT_ANY.patch
+	patches.suse/hfsplus-fix-slab-out-of-bounds-read-in-hfsplus_uni2asc_fix.patch
 
 	########################################################
 	# end of sorted patches
