--- a/series.conf
+++ b/series.conf
@@ -9801,6 +9801,7 @@
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.9-patches.patch
 	patches.suse/scsi-smartpqi-Take-drives-offline-when-controller-is-offli.patch
 	patches.suse/scsi-smartpqi-Add-new-PCI-IDs.patch
+	patches.suse/scsi-smartpqi-Enhance-WWID-logging-logic.patch
 	patches.suse/scsi-smartpqi-Fix-smp_processor_id-call-trace-for-preempti.patch
 	patches.suse/scsi-dc395x-Remove-leftover-if-statement-in-reselect.patch
 	patches.suse/scsi-ufs-mcq-Delete-ufshcd_release_scsi_cmd-in-ufshcd_mcq_.patch
