ALSA: usb-audio: Add DSD support for Comtrue USB Audio device (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33925,6 +33925,7 @@
 	patches.suse/soundwire-stream-restore-params-when-prepare-ports-f.patch
 	patches.suse/ALSA-scarlett2-Add-retry-on-EPROTO-from-scarlett2_us.patch
 	patches.suse/ASoC-fsl_xcvr-get-channel-status-data-when-PHY-is-no.patch
+	patches.suse/ALSA-usb-audio-Add-DSD-support-for-Comtrue-USB-Audio.patch
 	patches.suse/phy-rockchip-pcie-Properly-disable-TEST_WRITE-strobe.patch
 	patches.suse/dmaengine-dw-edma-Drop-unused-dchan2dev-and-chan2dev.patch
 	patches.suse/dmaengine-qcom-gpi-Drop-unused-gpi_write_reg_field.patch
