--- a/series.conf
+++ b/series.conf
@@ -34341,6 +34341,7 @@
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
 	patches.suse/ALSA-lx_core-use-int-type-to-store-negative-error-co.patch
 	patches.suse/ASoC-imx-hdmi-remove-cpu_pdev-related-code.patch
+	patches.suse/ASoC-qcom-audioreach-fix-potential-null-pointer-dere.patch
 
 	########################################################
 	# end of sorted patches
