--- a/series.conf
+++ b/series.conf
@@ -34340,6 +34340,7 @@
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
 	patches.suse/ALSA-lx_core-use-int-type-to-store-negative-error-co.patch
+	patches.suse/ASoC-imx-hdmi-remove-cpu_pdev-related-code.patch
 
 	########################################################
 	# end of sorted patches
