--- a/series.conf
+++ b/series.conf
@@ -34346,6 +34346,7 @@
 	patches.suse/ASoC-Intel-bytcr_rt5640-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/ALSA-usb-audio-fix-race-condition-to-UAF-in-snd_usbm.patch
+	patches.suse/ASoC-wcd934x-fix-error-handling-in-wcd934x_codec_par.patch
 
 	########################################################
 	# end of sorted patches
