--- a/series.conf
+++ b/series.conf
@@ -34344,6 +34344,7 @@
 	patches.suse/ASoC-qcom-audioreach-fix-potential-null-pointer-dere.patch
 	patches.suse/ASoC-Intel-bytcht_es8316-Fix-invalid-quirk-input-map.patch
 	patches.suse/ASoC-Intel-bytcr_rt5640-Fix-invalid-quirk-input-mapp.patch
+	patches.suse/ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-input-mapp.patch
 
 	########################################################
 	# end of sorted patches
