--- a/series.conf
+++ b/series.conf
@@ -34345,6 +34345,7 @@
 	patches.suse/ASoC-Intel-bytcht_es8316-Fix-invalid-quirk-input-map.patch
 	patches.suse/ASoC-Intel-bytcr_rt5640-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-input-mapp.patch
+	patches.suse/ALSA-usb-audio-fix-race-condition-to-UAF-in-snd_usbm.patch
 
 	########################################################
 	# end of sorted patches
