--- a/series.conf
+++ b/series.conf
@@ -34172,6 +34172,7 @@
 	patches.suse/ALSA-usb-audio-Add-mute-TLV-for-playback-volumes-on-.patch
 	patches.suse/ALSA-hda-realtek-Fix-headset-mic-for-TongFang-X6-AF-.patch
 	patches.suse/ALSA-usb-audio-move-mixer_quirks-min_mute-into-commo.patch
+	patches.suse/ALSA-usb-audio-Add-mute-TLV-for-playback-volumes-on--2cbe4ac.patch
 	patches.suse/ALSA-firewire-motu-drop-EPOLLOUT-from-poll-return-va.patch
 	patches.suse/ALSA-hda-hdmi-Add-pin-fix-for-another-HP-EliteDesk-8.patch
 	patches.suse/soc-qcom-mdt_loader-Deal-with-zero-e_shentsize.patch
