--- a/series.conf
+++ b/series.conf
@@ -34342,6 +34342,7 @@
 	patches.suse/ALSA-lx_core-use-int-type-to-store-negative-error-co.patch
 	patches.suse/ASoC-imx-hdmi-remove-cpu_pdev-related-code.patch
 	patches.suse/ASoC-qcom-audioreach-fix-potential-null-pointer-dere.patch
+	patches.suse/ASoC-Intel-bytcht_es8316-Fix-invalid-quirk-input-map.patch
 
 	########################################################
 	# end of sorted patches
