--- a/series.conf
+++ b/series.conf
@@ -34356,6 +34356,7 @@
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
 	patches.suse/drivers-base-node-handle-error-properly-in-register_.patch
+	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 
 	########################################################
 	# end of sorted patches
