--- a/series.conf
+++ b/series.conf
@@ -34349,6 +34349,7 @@
 	patches.suse/ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/ALSA-usb-audio-fix-race-condition-to-UAF-in-snd_usbm.patch
 	patches.suse/ASoC-wcd934x-fix-error-handling-in-wcd934x_codec_par.patch
+	patches.suse/drm-panel-novatek-nt35560-Fix-invalid-return-value.patch
 
 	########################################################
 	# end of sorted patches
