drm/i915/backlight: Return immediately when scale() finds invalid parameters (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31857,6 +31857,7 @@
 	patches.suse/drm-amdgpu-umsch-declare-umsch-firmware.patch
 	patches.suse/drm-amd-display-Don-t-treat-wb-connector-as-physical.patch
 	patches.suse/drm-amdgpu-Replace-Mutex-with-Spinlock-for-RLCG-regi.patch
+	patches.suse/drm-i915-backlight-Return-immediately-when-scale-fin.patch
 	patches.suse/drm-i915-dsi-Use-TRANS_DDI_FUNC_CTL-s-own-port-width.patch
 	patches.suse/drm-panel-ilitek-ili9882t-fix-GPIO-name-in-error-mes.patch
 	patches.suse/drm-repaper-fix-integer-overflows-in-repeat-function.patch
