drivers/base/node: handle error properly in register_one_node() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34355,6 +34355,7 @@
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
+	patches.suse/drivers-base-node-handle-error-properly-in-register_.patch
 
 	########################################################
 	# end of sorted patches
