--- a/series.conf
+++ b/series.conf
@@ -34353,6 +34353,7 @@
 	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
+	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 
 	########################################################
 	# end of sorted patches
