--- a/series.conf
+++ b/series.conf
@@ -34350,6 +34350,7 @@
 	patches.suse/ALSA-usb-audio-fix-race-condition-to-UAF-in-snd_usbm.patch
 	patches.suse/ASoC-wcd934x-fix-error-handling-in-wcd934x_codec_par.patch
 	patches.suse/drm-panel-novatek-nt35560-Fix-invalid-return-value.patch
+	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
 
 	########################################################
 	# end of sorted patches
