--- a/series.conf
+++ b/series.conf
@@ -34351,6 +34351,7 @@
 	patches.suse/ASoC-wcd934x-fix-error-handling-in-wcd934x_codec_par.patch
 	patches.suse/drm-panel-novatek-nt35560-Fix-invalid-return-value.patch
 	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
+	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 
 	########################################################
 	# end of sorted patches
