--- a/series.conf
+++ b/series.conf
@@ -34372,6 +34372,7 @@
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
 	patches.suse/drivers-base-node-handle-error-properly-in-register_.patch
+	patches.suse/maple_tree-fix-MAPLE_PARENT_RANGE32-and-parent-point.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 
 	########################################################
