--- a/series.conf
+++ b/series.conf
@@ -34358,6 +34358,7 @@
 	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
 	patches.suse/drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
 	patches.suse/drm-amd-pm-Fix-si_upload_smc_data-v3.patch
+	patches.suse/drm-amd-pm-Adjust-si_upload_smc_data-register-progra.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
