--- a/series.conf
+++ b/series.conf
@@ -34355,6 +34355,7 @@
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
+	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
