media: rj54n1cb0c: Fix memleak in rj54n1_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34367,6 +34367,7 @@
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
 	patches.suse/media-lirc-Fix-error-handling-in-lirc_register.patch
+	patches.suse/media-rj54n1cb0c-Fix-memleak-in-rj54n1_probe.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
