drm/amdkfd: Fix error code sign for EINVAL in svm_ioctl() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34362,6 +34362,7 @@
 	patches.suse/drm-amd-pm-Treat-zero-vblank-time-as-too-short-in-si.patch
 	patches.suse/drm-amd-pm-Disable-MCLK-switching-with-non-DC-at-120.patch
 	patches.suse/drm-amd-pm-Disable-SCLK-switching-on-Oland-with-high.patch
+	patches.suse/drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-svm_ioc.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
