--- a/series.conf
+++ b/series.conf
@@ -34289,6 +34289,7 @@
 	patches.suse/crypto-af_alg-Set-merge-to-zero-early-in-af_alg_send.patch
 	patches.suse/mmc-mvsdio-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/iommu-vt-d-Fix-__domain_mapping-s-usage-of-switch_to.patch
+	patches.suse/firewire-core-fix-overlooked-update-of-subsystem-ABI.patch
 	patches.suse/btrfs-tree-checker-fix-the-incorrect-inode-ref-size-.patch
 	patches.suse/IB-mlx5-Fix-obj_type-mismatch-for-SRQ-event-subscrip.patch
 	patches.suse/cpufreq-Initialize-cpufreq-based-invariance-before-subsys.patch
