--- a/series.conf
+++ b/series.conf
@@ -34373,6 +34373,7 @@
 	patches.suse/media-rj54n1cb0c-Fix-memleak-in-rj54n1_probe.patch
 	patches.suse/media-v4l2-subdev-Fix-alloc-failure-check-in-v4l2_su.patch
 	patches.suse/media-st-delta-avoid-excessive-stack-usage.patch
+	patches.suse/media-cx18-Add-missing-check-after-DMA-map.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
