--- a/series.conf
+++ b/series.conf
@@ -34380,6 +34380,7 @@
 	patches.suse/media-b2c2-Fix-use-after-free-causing-by-irq_check_w.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
+	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
