--- a/series.conf
+++ b/series.conf
@@ -33631,6 +33631,7 @@
 	patches.suse/usb-host-xhci-plat-fix-incorrect-type-for-of_match-v.patch
 	patches.suse/Documentation-usb-gadget-Wrap-remaining-usage-snippe.patch
 	patches.suse/usb-misc-apple-mfi-fastcharge-Make-power-supply-name.patch
+	patches.suse/usb-core-Add-0x-prefix-to-quirks-debug-output.patch
 	patches.suse/usb-core-usb_submit_urb-downgrade-type-check.patch
 	patches.suse/usb-typec-intel_pmc_mux-Defer-probe-if-SCU-IPC-isn-t.patch
 	patches.suse/usb-core-config-Prevent-OOB-read-in-SS-endpoint-comp.patch
