--- a/series.conf
+++ b/series.conf
@@ -34388,6 +34388,7 @@
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
+	patches.suse/net-usb-Remove-disruptive-netif_wake_queue-in-rtl815.patch
 	patches.suse/drivers-base-node-handle-error-properly-in-register_.patch
 	patches.suse/maple_tree-fix-MAPLE_PARENT_RANGE32-and-parent-point.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
