--- a/series.conf
+++ b/series.conf
@@ -34382,6 +34382,7 @@
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
 	patches.suse/wifi-rtw89-avoid-circular-locking-dependency-in-ser_.patch
+	patches.suse/wifi-ath11k-fix-NULL-dereference-in-ath11k_qmi_m3_lo.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
