--- a/series.conf
+++ b/series.conf
@@ -34376,6 +34376,7 @@
 	patches.suse/media-cx18-Add-missing-check-after-DMA-map.patch
 	patches.suse/media-pci-ivtv-Add-missing-check-after-DMA-map.patch
 	patches.suse/media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
+	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
