--- a/series.conf
+++ b/series.conf
@@ -34240,6 +34240,7 @@
 	patches.suse/can-j1939-j1939_local_ecu_get-undo-increment-when-j1.patch
 	patches.suse/can-xilinx_can-xcan_write_frame-fix-use-after-free-o.patch
 	patches.suse/can-rcar_can-rcar_can_resume-fix-s2ram-with-PSCI.patch
+	patches.suse/wifi-virt_wifi-Fix-page-fault-on-connect.patch
 	patches.suse/mtd-rawnand-stm32_fmc2-avoid-overlapping-mappings-on.patch
 	patches.suse/mtd-rawnand-stm32_fmc2-fix-ECC-overwrite.patch
 	patches.suse/mtd-nand-raw-atmel-Respect-tAR-tCLR-in-read-setup-ti.patch
