--- a/series.conf
+++ b/series.conf
@@ -34392,6 +34392,7 @@
 	patches.suse/net-nfc-nci-Add-parameter-validation-for-packet-data.patch
 	patches.suse/drivers-base-node-handle-error-properly-in-register_.patch
 	patches.suse/maple_tree-fix-MAPLE_PARENT_RANGE32-and-parent-point.patch
+	patches.suse/drivers-base-node-fix-double-free-in-register_one_no.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 
 	########################################################
