--- a/series.conf
+++ b/series.conf
@@ -55471,6 +55471,7 @@
 	patches.suse/ASoC-Intel-sof_sdw-Prevent-jump-to-NULL-add_sidecar-.patch
 	patches.suse/drm-panthor-Fix-memory-leak-in-panthor_ioctl_group_c.patch
 	patches.suse/media-mc-Fix-MUST_CONNECT-handling-for-pads-with-no-.patch
+	patches.suse/media-tuner-xc5000-Fix-use-after-free-in-xc5000_rele.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
