--- a/series.conf
+++ b/series.conf
@@ -55469,6 +55469,7 @@
 	patches.suse/i3c-master-svc-Use-manual-response-for-IBI-events.patch
 	patches.suse/ALSA-pcm-Disable-bottom-softirqs-as-part-of-spin_loc.patch
 	patches.suse/ASoC-Intel-sof_sdw-Prevent-jump-to-NULL-add_sidecar-.patch
+	patches.suse/drm-panthor-Fix-memory-leak-in-panthor_ioctl_group_c.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
