--- a/series.conf
+++ b/series.conf
@@ -55474,6 +55474,7 @@
 	patches.suse/media-tuner-xc5000-Fix-use-after-free-in-xc5000_rele.patch
 	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
 	patches.suse/wifi-ath12k-fix-the-fetching-of-combined-rssi.patch
+	patches.suse/wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
