ASoC: Intel: sof_sdw: Prevent jump to NULL add_sidecar callback (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55468,6 +55468,7 @@
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
 	patches.suse/i3c-master-svc-Use-manual-response-for-IBI-events.patch
 	patches.suse/ALSA-pcm-Disable-bottom-softirqs-as-part-of-spin_loc.patch
+	patches.suse/ASoC-Intel-sof_sdw-Prevent-jump-to-NULL-add_sidecar-.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
