wifi: iwlwifi: Remove redundant header files (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55472,6 +55472,7 @@
 	patches.suse/drm-panthor-Fix-memory-leak-in-panthor_ioctl_group_c.patch
 	patches.suse/media-mc-Fix-MUST_CONNECT-handling-for-pads-with-no-.patch
 	patches.suse/media-tuner-xc5000-Fix-use-after-free-in-xc5000_rele.patch
+	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
