--- a/series.conf
+++ b/series.conf
@@ -55470,6 +55470,7 @@
 	patches.suse/ALSA-pcm-Disable-bottom-softirqs-as-part-of-spin_loc.patch
 	patches.suse/ASoC-Intel-sof_sdw-Prevent-jump-to-NULL-add_sidecar-.patch
 	patches.suse/drm-panthor-Fix-memory-leak-in-panthor_ioctl_group_c.patch
+	patches.suse/media-mc-Fix-MUST_CONNECT-handling-for-pads-with-no-.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
