--- a/series.conf
+++ b/series.conf
@@ -55476,6 +55476,7 @@
 	patches.suse/wifi-ath12k-fix-the-fetching-of-combined-rssi.patch
 	patches.suse/wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
+	patches.suse/Bluetooth-hci_sync-Fix-using-random-address-for-BIG-.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
