--- a/series.conf
+++ b/series.conf
@@ -55467,6 +55467,7 @@
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
 	patches.suse/i3c-master-svc-Use-manual-response-for-IBI-events.patch
+	patches.suse/ALSA-pcm-Disable-bottom-softirqs-as-part-of-spin_loc.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
