Bluetooth: ISO: free rx_skb if not consumed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55475,6 +55475,7 @@
 	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
 	patches.suse/wifi-ath12k-fix-the-fetching-of-combined-rssi.patch
 	patches.suse/wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
+	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
