--- a/series.conf
+++ b/series.conf
@@ -12129,6 +12129,7 @@
 	patches.suse/nvme-tcp-send-only-permitted-commands-for-secure-con.patch
 	patches.suse/ALSA-lx_core-use-int-type-to-store-negative-error-co.patch
 	patches.suse/ALSA-pcm-Disable-bottom-softirqs-as-part-of-spin_loc.patch
+	patches.suse/ASoC-imx-hdmi-remove-cpu_pdev-related-code.patch
 	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
