--- a/series.conf
+++ b/series.conf
@@ -12130,6 +12130,7 @@
 	patches.suse/ALSA-lx_core-use-int-type-to-store-negative-error-co.patch
 	patches.suse/ALSA-pcm-Disable-bottom-softirqs-as-part-of-spin_loc.patch
 	patches.suse/ASoC-imx-hdmi-remove-cpu_pdev-related-code.patch
+	patches.suse/ASoC-qcom-audioreach-fix-potential-null-pointer-dere.patch
 	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
