ALSA: lx_core: use int type to store negative error codes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12127,6 +12127,7 @@
 	patches.suse/nvmet-fcloop-call-done-callback-even-when-remote-por.patch
 	patches.suse/nvme-fc-use-lock-accessing-port_state-and-rport-stat.patch
 	patches.suse/nvme-tcp-send-only-permitted-commands-for-secure-con.patch
+	patches.suse/ALSA-lx_core-use-int-type-to-store-negative-error-co.patch
 	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
