--- a/series.conf
+++ b/series.conf
@@ -10944,6 +10944,7 @@
 	patches.suse/ALSA-usb-audio-Avoid-multiple-assignments-in-mixer_q.patch
 	patches.suse/ALSA-usb-audio-Simplify-NULL-comparison-in-mixer_qui.patch
 	patches.suse/ALSA-usb-audio-Remove-unneeded-wmb-in-mixer_quirks.patch
+	patches.suse/ALSA-usb-audio-Add-mixer-quirk-for-Sony-DualSense-PS.patch
 	patches.suse/ALSA-pcm-Rewrite-recalculate_boundary-to-avoid-costl.patch
 	patches.suse/ALSA-hda-ca0132-Fix-buffer-overflow-in-add_tuning_co.patch
 	patches.suse/ALSA-intel8x0-Fix-incorrect-codec-index-usage-in-mix.patch
