ASoC: Intel: bytcht_es8316: Fix invalid quirk input mapping (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12131,6 +12131,7 @@
 	patches.suse/ALSA-pcm-Disable-bottom-softirqs-as-part-of-spin_loc.patch
 	patches.suse/ASoC-imx-hdmi-remove-cpu_pdev-related-code.patch
 	patches.suse/ASoC-qcom-audioreach-fix-potential-null-pointer-dere.patch
+	patches.suse/ASoC-Intel-bytcht_es8316-Fix-invalid-quirk-input-map.patch
 	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
