ALSA: usb-audio: Fix code alignment in mixer_quirks (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10937,6 +10937,7 @@
 	patches.suse/thermal-drivers-mediatek-lvts_thermal-Add-lvts-comma.patch
 	patches.suse/thermal-drivers-mediatek-lvts_thermal-Add-mt7988-lvt.patch
 	patches.suse/thermal-sysfs-Return-ENODATA-instead-of-EAGAIN-for-r.patch
+	patches.suse/ALSA-usb-audio-Fix-code-alignment-in-mixer_quirks.patch
 	patches.suse/ALSA-usb-audio-Avoid-precedence-issues-in-mixer_quir.patch
 	patches.suse/ALSA-pcm-Rewrite-recalculate_boundary-to-avoid-costl.patch
 	patches.suse/ALSA-hda-ca0132-Fix-buffer-overflow-in-add_tuning_co.patch
