Bluetooth: hci_sync: Fix using random address for BIG/PA advertisements (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12162,6 +12162,7 @@
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
+	patches.suse/Bluetooth-hci_sync-Fix-using-random-address-for-BIG-.patch
 	patches.suse/drivers-base-node-handle-error-properly-in-register_.patch
 	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
