drm/i915/backlight: Return immediately when scale() finds invalid parameters (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7628,6 +7628,7 @@
 	patches.suse/drm-amd-display-Add-support-for-disconnected-eDP-str.patch
 	patches.suse/0001-drm-amdgpu-Replace-Mutex-with-Spinlock-for-RLCG-regi.patch
 	patches.suse/drm-amd-pm-Fetch-current-power-limit-from-PMFW.patch
+	patches.suse/drm-i915-backlight-Return-immediately-when-scale-fin.patch
 	patches.suse/drm-xe-Reject-BO-eviction-if-BO-is-bound-to-current-.patch
 	patches.suse/drm-xe-sa-Always-call-drm_suballoc_manager_fini.patch
 	patches.suse/drm-xe-Do-not-attempt-to-bootstrap-VF-in-execlists-m.patch
