drm/rcar-du: dsi: Fix 1/2/3 lane support (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12147,6 +12147,7 @@
 	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
+	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
