drm/amd/pm: Fix si_upload_smc_data (v3) (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12150,6 +12150,7 @@
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
 	patches.suse/drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
+	patches.suse/drm-amd-pm-Fix-si_upload_smc_data-v3.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
