media: cec: extron-da-hd-4k-plus: drop external-module make commands (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12169,6 +12169,7 @@
 	patches.suse/media-cx18-Add-missing-check-after-DMA-map.patch
 	patches.suse/media-pci-ivtv-Add-missing-check-after-DMA-map.patch
 	patches.suse/media-pci-mg4b-fix-uninitialized-iio-scan-data.patch
+	patches.suse/media-cec-extron-da-hd-4k-plus-drop-external-module-.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
