wifi: mt76: mt7996: Convert mt7996_wed_rro_addr to LE (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12184,6 +12184,7 @@
 	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
 	patches.suse/wifi-mt76-mt7996-Fix-RX-packets-configuration-for-pr.patch
+	patches.suse/wifi-mt76-mt7996-Convert-mt7996_wed_rro_addr-to-LE.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
