wifi: ath11k: HAL SRNG: don't deinitialize and re-initialize again (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12192,6 +12192,7 @@
 	patches.suse/wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
 	patches.suse/wifi-ath11k-fix-NULL-dereference-in-ath11k_qmi_m3_lo.patch
 	patches.suse/wifi-ath10k-avoid-unnecessary-wait-for-service-ready.patch
+	patches.suse/wifi-ath11k-HAL-SRNG-don-t-deinitialize-and-re-initi.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
