crypto: keembay - Add missing check after sg_nents_for_len() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34425,6 +34425,7 @@
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
+	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 
 	########################################################
 	# end of sorted patches
