tty: n_gsm: Don't block input queue by waiting MSC (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34435,6 +34435,7 @@
 	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
 	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
 	patches.suse/serial-max310x-Add-error-checking-in-probe.patch
+	patches.suse/tty-n_gsm-Don-t-block-input-queue-by-waiting-MSC.patch
 
 	########################################################
 	# end of sorted patches
