iio: frequency: adf4350: Fix prescaler usage (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34443,6 +34443,7 @@
 	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
 	patches.suse/iio-xilinx-ams-Unmask-interrupts-after-updating-alar.patch
 	patches.suse/iio-xilinx-ams-Fix-AMS_ALARM_THR_DIRECT_MASK.patch
+	patches.suse/iio-frequency-adf4350-Fix-prescaler-usage.patch
 
 	########################################################
 	# end of sorted patches
