hwrng: nomadik - add ARM_AMBA dependency (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34426,6 +34426,7 @@
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
+	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
 
 	########################################################
 	# end of sorted patches
