HID: intel-ish-ipc: Remove redundant ready check after timeout function (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34432,6 +34432,7 @@
 	patches.suse/crypto-aspeed-Fix-dma_unmap_sg-direction.patch
 	patches.suse/crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_diff_reg.patch
 	patches.suse/hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng_init.patch
+	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
 
 	########################################################
 	# end of sorted patches
