iio: consumers: Fix offset handling in iio_convert_raw_to_processed() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34447,6 +34447,7 @@
 	patches.suse/iio-frequency-adf4350-Fix-ADF4350_REG3_12BIT_CLKDIV_.patch
 	patches.suse/iio-dac-ad5360-use-int-type-to-store-negative-error-.patch
 	patches.suse/iio-dac-ad5421-use-int-type-to-store-negative-error-.patch
+	patches.suse/iio-consumers-Fix-offset-handling-in-iio_convert_raw.patch
 
 	########################################################
 	# end of sorted patches
