iio: dac: ad5360: use int type to store negative error codes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34445,6 +34445,7 @@
 	patches.suse/iio-xilinx-ams-Fix-AMS_ALARM_THR_DIRECT_MASK.patch
 	patches.suse/iio-frequency-adf4350-Fix-prescaler-usage.patch
 	patches.suse/iio-frequency-adf4350-Fix-ADF4350_REG3_12BIT_CLKDIV_.patch
+	patches.suse/iio-dac-ad5360-use-int-type-to-store-negative-error-.patch
 
 	########################################################
 	# end of sorted patches
