mtd: rawnand: omap2: fix device leak on probe failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34433,6 +34433,7 @@
 	patches.suse/crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_diff_reg.patch
 	patches.suse/hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng_init.patch
 	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
+	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
 
 	########################################################
 	# end of sorted patches
