--- a/series.conf
+++ b/series.conf
@@ -34429,6 +34429,7 @@
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
 	patches.suse/crypto-hisilicon-qm-check-whether-the-input-function.patch
 	patches.suse/crypto-atmel-Fix-dma_unmap_sg-direction.patch
+	patches.suse/crypto-aspeed-Fix-dma_unmap_sg-direction.patch
 
 	########################################################
 	# end of sorted patches
