misc: genwqe: Fix incorrect cmd field being reported in error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34440,6 +34440,7 @@
 	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
+	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
 
 	########################################################
 	# end of sorted patches
