usb: cdns3: cdnsp-pci: remove redundant pci_disable_device() call (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55482,6 +55482,7 @@
 	patches.suse/crypto-hisilicon-qm-request-reserved-interrupt-for-v.patch
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 	patches.suse/usb-gadget-configfs-Correctly-set-use_os_string-at-b.patch
+	patches.suse/usb-cdns3-cdnsp-pci-remove-redundant-pci_disable_dev.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
