usb: phy: twl6030: Fix incorrect type for ret (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55480,6 +55480,7 @@
 	patches.suse/crypto-hisilicon-zip-remove-unnecessary-validation-f.patch
 	patches.suse/crypto-hisilicon-re-enable-address-prefetch-after-de.patch
 	patches.suse/crypto-hisilicon-qm-request-reserved-interrupt-for-v.patch
+	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
