crypto: hisilicon/qm - request reserved interrupt for virtual function (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55479,6 +55479,7 @@
 	patches.suse/Bluetooth-hci_sync-Fix-using-random-address-for-BIG-.patch
 	patches.suse/crypto-hisilicon-zip-remove-unnecessary-validation-f.patch
 	patches.suse/crypto-hisilicon-re-enable-address-prefetch-after-de.patch
+	patches.suse/crypto-hisilicon-qm-request-reserved-interrupt-for-v.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
