usb: vhci-hcd: Prevent suspending virtually attached devices (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55485,6 +55485,7 @@
 	patches.suse/usb-cdns3-cdnsp-pci-remove-redundant-pci_disable_dev.patch
 	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
 	patches.suse/Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop-if-th.patch
+	patches.suse/usb-vhci-hcd-Prevent-suspending-virtually-attached-d.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
