usb: typec: tipd: Clear interrupts first (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55483,6 +55483,7 @@
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 	patches.suse/usb-gadget-configfs-Correctly-set-use_os_string-at-b.patch
 	patches.suse/usb-cdns3-cdnsp-pci-remove-redundant-pci_disable_dev.patch
+	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
