crypto: hisilicon/zip - remove unnecessary validation for high-performance mode configurations (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12239,6 +12239,7 @@
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
 	patches.suse/crypto-octeontx2-Call-strscpy-with-correct-size-argu.patch
+	patches.suse/crypto-hisilicon-zip-remove-unnecessary-validation-f.patch
 
 	########################################################
 	# end of sorted patches
