thunderbolt: Compare HMAC values in constant time (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12262,6 +12262,7 @@
 	patches.suse/usb-cdns3-cdnsp-pci-remove-redundant-pci_disable_dev.patch
 	patches.suse/usb-typec-tipd-Clear-interrupts-first.patch
 	patches.suse/Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop-if-th.patch
+	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 
 	########################################################
 	# end of sorted patches
