iio: consumers: Fix offset handling in iio_convert_raw_to_processed() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12274,6 +12274,7 @@
 	patches.suse/iio-dac-ad5360-use-int-type-to-store-negative-error-.patch
 	patches.suse/iio-dac-ad5421-use-int-type-to-store-negative-error-.patch
 	patches.suse/iio-consumers-Fix-handling-of-negative-channel-scale.patch
+	patches.suse/iio-consumers-Fix-offset-handling-in-iio_convert_raw.patch
 
 	########################################################
 	# end of sorted patches
