crypto: octeontx2 - Call strscpy() with correct size argument (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12238,6 +12238,7 @@
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.11-patches.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
+	patches.suse/crypto-octeontx2-Call-strscpy-with-correct-size-argu.patch
 
 	########################################################
 	# end of sorted patches
