serial: max310x: Add error checking in probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12253,6 +12253,7 @@
 	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
 	patches.suse/mtd-rawnand-atmel-Fix-error-handling-path-in-atmel_n.patch
 	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
+	patches.suse/serial-max310x-Add-error-checking-in-probe.patch
 
 	########################################################
 	# end of sorted patches
