iio/adc/pac1934: fix channel disable configuration (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12266,6 +12266,7 @@
 	patches.suse/usb-vhci-hcd-Prevent-suspending-virtually-attached-d.patch
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
 	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
+	patches.suse/iio-adc-pac1934-fix-channel-disable-configuration.patch
 
 	########################################################
 	# end of sorted patches
