bus: mhi: ep: Fix chained transfer handling in read path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12277,6 +12277,7 @@
 	patches.suse/iio-consumers-Fix-offset-handling-in-iio_convert_raw.patch
 	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
 	patches.suse/bus-mhi-host-Do-not-use-uninitialized-dev-pointer-in.patch
+	patches.suse/bus-mhi-ep-Fix-chained-transfer-handling-in-read-pat.patch
 
 	########################################################
 	# end of sorted patches
