mtd: rawnand: atmel: Fix error handling path in atmel_nand_controller_add_nands (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12251,6 +12251,7 @@
 	patches.suse/KEYS-trusted_tpm1-Compare-HMAC-values-in-constant-ti.patch
 	patches.suse/HID-hidraw-tighten-ioctl-command-parsing.patch
 	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
+	patches.suse/mtd-rawnand-atmel-Fix-error-handling-path-in-atmel_n.patch
 
 	########################################################
 	# end of sorted patches
