iio: frequency: adf4350: Fix prescaler usage (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12269,6 +12269,7 @@
 	patches.suse/iio-adc-pac1934-fix-channel-disable-configuration.patch
 	patches.suse/iio-xilinx-ams-Unmask-interrupts-after-updating-alar.patch
 	patches.suse/iio-xilinx-ams-Fix-AMS_ALARM_THR_DIRECT_MASK.patch
+	patches.suse/iio-frequency-adf4350-Fix-prescaler-usage.patch
 
 	########################################################
 	# end of sorted patches
