usb: misc: qcom_eud: Access EUD_MODE_MANAGER2 through secure calls (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12256,6 +12256,7 @@
 	patches.suse/serial-max310x-Add-error-checking-in-probe.patch
 	patches.suse/tty-n_gsm-Don-t-block-input-queue-by-waiting-MSC.patch
 	patches.suse/usb-host-max3421-hcd-Fix-error-pointer-dereference-i.patch
+	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
 
 	########################################################
 	# end of sorted patches
