bus: mhi: host: Do not use uninitialized 'dev' pointer in mhi_init_irq_setup() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12276,6 +12276,7 @@
 	patches.suse/iio-consumers-Fix-handling-of-negative-channel-scale.patch
 	patches.suse/iio-consumers-Fix-offset-handling-in-iio_convert_raw.patch
 	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
+	patches.suse/bus-mhi-host-Do-not-use-uninitialized-dev-pointer-in.patch
 
 	########################################################
 	# end of sorted patches
