hwrng: nomadik - add ARM_AMBA dependency (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12237,6 +12237,7 @@
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.11.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.11-patches.patch
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
+	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
 
 	########################################################
 	# end of sorted patches
