HID: intel-ish-ipc: Remove redundant ready check after timeout function (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12250,6 +12250,7 @@
 	patches.suse/hwrng-ks-sa-fix-division-by-zero-in-ks_sa_rng_init.patch
 	patches.suse/KEYS-trusted_tpm1-Compare-HMAC-values-in-constant-ti.patch
 	patches.suse/HID-hidraw-tighten-ioctl-command-parsing.patch
+	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
 
 	########################################################
 	# end of sorted patches
