KEYS: X.509: Fix Basic Constraints CA flag parsing (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12246,6 +12246,7 @@
 	patches.suse/crypto-atmel-Fix-dma_unmap_sg-direction.patch
 	patches.suse/crypto-aspeed-Fix-dma_unmap_sg-direction.patch
 	patches.suse/crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_diff_reg.patch
+	patches.suse/KEYS-X.509-Fix-Basic-Constraints-CA-flag-parsing.patch
 
 	########################################################
 	# end of sorted patches
