mtd: rawnand: omap2: fix device leak on probe failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12252,6 +12252,7 @@
 	patches.suse/HID-hidraw-tighten-ioctl-command-parsing.patch
 	patches.suse/HID-intel-ish-ipc-Remove-redundant-ready-check-after.patch
 	patches.suse/mtd-rawnand-atmel-Fix-error-handling-path-in-atmel_n.patch
+	patches.suse/mtd-rawnand-omap2-fix-device-leak-on-probe-failure.patch
 
 	########################################################
 	# end of sorted patches
